--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^22.0.0",
+    "@types/pg": "^8.8.0",
     "prisma": "^7.3.0",
     "tsx": "^4.0.0",
     "typescript": "^5.8.0"
