--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "fastify": "^5.0.0",
     "pg": "^8.13.1",
     "pino": "^9.0.0",
-    "zod": "^3.24.0"
+    "zod": "^3.24.0",
+    "tsx": "^4.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -31,7 +32,6 @@
     "@prisma/config": "^7.1.0",
     "@types/pg": "^8.8.0",
     "prisma": "^7.3.0",
-    "tsx": "^4.0.0",
     "typescript": "^5.8.0"
   }
 }
