deploy 9 - :rocket: quando isso acaba

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -25,5 +25,6 @@ COPY --from=build /app/node_modules/.prisma /app/node_modules/.prisma
 COPY --from=build /app/dist /app/dist
 COPY prisma ./prisma
 COPY prisma.config.ts ./
+COPY --from=build /app/src ./src
 
 CMD ["node", "dist/server.js"]
