--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "recharts": "^3.6.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
     "@types/d3-geo": "^3.1.0",
+    "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
